REDIS/eksprod/argocd/deploy/05-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis724-network-policy
  namespace: eksprod
  labels:
    app: redis724
    tier: database
    code: sql
    country: cl
    language: es
    environment: eksprod
spec:
  podSelector:
    matchLabels:
      app: redis724
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          environment: eksprod # selector de etiquetas apropiado que coincida con los pods permitidos para conectarse a Redis.
    ports:
    - protocol: TCP
      port: 6380
